# sonictales

./: .gitignore  CLAUDE.md  README.md  REFACTORING_SUMMARY.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.claude/skills/: start.md  stop.md
build-output/ir-derived-presets/: IR cath york minster nave.h2p  IR cave bricasti m7 cavern.h2p  IR cave echothief batcave.h2p  IR cave echothief discovery room.h2p  IR cave echothief fat mans misery.h2p  IR cave echothief fat mans squeeze.h2p  IR cave echothief isla mujeres cave.h2p  IR cave echothief lawrence welk cave.h2p  IR cave gill heads mine.h2p  IR cave voxengo prehistoric cave.h2p  IR cham bricasti m7 large tiled.h2p  IR cham bricasti m7 small tiled.h2p  IR cham bricasti m7 vocal chamber.h2p  IR cham echothief hartwell tavern.h2p  IR chur 1st baptist nashville close.h2p  IR chur 1st baptist nashville far.h2p  (+78 more)
docs/: ir-to-reverb-tool-plan.md  melody-mapper.md  mseg-tools-build-plan.md  pitch-detection-research.md  pitch-to-mseg-build.md  reverb-ir-ab-plan.md  zebra3-h2p-compression.md  zebra3-mapper-format.md  zebra3-mseg-format.md
plugin/: CMakeLists.txt  README.md
plugin/Source/: Oscillator.cpp  Oscillator.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SynthSound.h  SynthVoice.cpp  SynthVoice.h
scripts/: analyze-ir.js  convert-crepe-h5.py  diff-crvpos.mjs  generate-reverb-bank.js  generate-test-wav.mjs  h2p-decode.js  h2p-encode.js  ir-to-preset.js  test-3curve.mjs  test-mseg-codec.mjs  test-pitch-detect.mjs
src/: App.tsx  App_old.tsx  app.js  index.css  main.tsx
(+188 files in other folders)
